--- a/views/about.ejs
+++ b/views/about.ejs
@@ -17,8 +17,8 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-danger">
         <div class="container-fluid ">
-            <img src="../F1.svg.png" id="f1img" alt="">
-            <a class="navbar-brand   " href="../index.html">F1 History</a>
+            <img src="F1.svg.png" id="f1img" alt="">
+            <a class="navbar-brand   " href="/">F1 History</a>
             <button class="navbar-toggler   " type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,13 +27,13 @@
                 <ul class="navbar-nav ">
 
                     <li class="nav-item ">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="../contructors/index.html">Constructors</a>
+                        <a class="nav-link" href="/constructors">Constructors</a>
                     </li>
                 </ul>
                 <!-- <form onsubmit="return setAction(this)" class="d-flex">
