--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,10 +30,10 @@
                         <a class="nav-link active" aria-current="page" href="">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="about/about.html">About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="constructors/index.html">Constructors</a>
+                        <a class="nav-link" href="/constructors">Constructors</a>
                     </li>
                 </ul>
                 <form class="d-flex" id="searchForm">
