--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>F1 World</title>
-    <link rel="stylesheet" href="bootstrap.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="bootstrap.js"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-
+<% layout('layouts/boilerplate') %>
     <nav class="navbar navbar-expand-md navbar-dark bg-danger fixed-top">
         <div class="container-fluid ">
             <img src="F1.svg.png" id="f1img" alt="">
@@ -76,10 +60,3 @@
             Welcome to F1. Please enter your search query!
         </h1>
     </section>
-
-
-    <script src="script.js"></script>
-
-</body>
-
-</html>
