--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,62 +1,7 @@
 <% layout('layouts/boilerplate') %>
-    <nav class="navbar navbar-expand-md navbar-dark bg-danger fixed-top">
-        <div class="container-fluid ">
-            <img src="F1.svg.png" id="f1img" alt="">
-            <a class="navbar-brand   " href="">F1 Home</a>
-            <button class="navbar-toggler   " type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse " id="navbarContent">
-                <ul class="navbar-nav ">
-
-                    <li class="nav-item ">
-                        <a class="nav-link active" aria-current="page" href="">Home</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="/about">About</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="/constructors">Constructors</a>
-                    </li>
-                </ul>
-                <form class="d-flex" id="searchForm">
-                    <input class="form-control me-2 inputData" type="search" id="searchInput" type="number" name="year"
-                        placeholder="Choose a search type" required aria-label="Search">
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle ms-1 me-2" type="button"
-                            id="searchTypeDropDownMenu" data-bs-toggle="dropdown" aria-expanded="false">
-                            Search Type
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="searchTypeDropDownMenu">
-                            <li>
-                                <div class="form-check"> <input class="form-check-input" type="radio" name="searchType"
-                                        id="byYear" checked>
-                                    <label class="form-check-label" for="byYear">By F1 Season</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-check"> <input class="form-check-input" type="radio" name="searchType"
-                                        id="byGP">
-                                    <label class="form-check-label" for="byGP">By GrandPrix</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="form-check"> <input class="form-check-input" type="radio" name="searchType"
-                                        id="byDriverAndYear">
-                                    <label class="form-check-label" for="byDriverAndYear">By Driver,Year</label>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <button class="btn btn-outline-success text-light " id="searchButton" type="submit">Search</button>
-                </form>
-            </div>
-
-        </div>
-    </nav>
-    <section class="container-fluid introWelcome" id="introWelcome">
-        <h1>
-            Welcome to F1. Please enter your search query!
-        </h1>
-    </section>
+    <%- include('partials/navbar') %>
+        <section class="container-fluid introWelcome" id="introWelcome">
+            <h1>
+                Welcome to F1. Please enter your search query!
+            </h1>
+        </section>
