--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,10 +13,16 @@
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item ">
+                    <a class="nav-link" href="/standings">Standings</a>
+                </li>
+                <li class="nav-item ">
                     <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="/constructors">Constructors</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="/forum">Forum</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="/login">login</a>
