--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,7 +16,8 @@
 
 <body>
     <%- body%>
-        <script src="/js/script.js"></script>
+        <%- include('../partials/flash') %>
+            <script src="/js/script.js"></script>
 </body>
 
 </html>
