--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-danger">
     <div class="container-fluid ">
-        <img src="/F1.svg.png" id="f1img" alt="">
+        <div class="image-container">
+            <img src="/F1.svg.png" id="f1img" alt="">
+        </div>
         <a class="navbar-brand   " href="/">F1</a>
         <button class="navbar-toggler   " type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
