--- a/views/standings.ejs
+++ b/views/standings.ejs
@@ -6,3 +6,22 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="/js/standingsScript.js"></script>
+        <style>
+            @media(max-width:400px) {
+
+
+                #tableContainer {
+                    overflow-x: scroll;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                .driversTable {
+                    align-self: flex-start;
+                    background-color: rgba(255, 255, 255, 0.418);
+                }
+            }
+        </style>
