--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,3 +5,11 @@
                 Welcome to F1. Please enter your search query!
             </h1>
         </section>
+        <style>
+            @media(max-width:400px) {
+                .driverTableContainer {
+                    overflow-x: scroll;
+                    width: 50%;
+                }
+            }
+        </style>
