showing username and pass

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -7,3 +7,7 @@
             <input type="password" id="password" name="password" placeholder="password" autocomplete="false">
             <button>LOGIN</button>
         </form>
+        <div>
+            <div>username: ray </div>
+            <div>password: test</div>
+        </div>
